# zcgen

./: .gitignore  CMakeLists.txt
CTest/: README.md  control_flow.c  debug_test.c  debug_token_test.c  hello.c  math.c  math_preprocessed.c  no_stdlib.c  operators.c  simple.c  test2_static_type.c  test3_inline_type.c  test4_static_inline_type.c  test6_static_func_decl.c  test7_func_def.c  test_basic_types.c  test_build_check.c  test_builtin_function.c  test_clean_system_types.c  test_complex_function_call.c  test_complex_function_pointer.c  test_complex_typedef.c  test_comprehensive_gcc.c  test_computed_goto.c  test_computed_goto_stmt.c  test_debug_func.c  test_debug_simple.c  test_enum.c  test_function_declarations.c  test_function_pointer.c  test_function_pointer_typedef.c  test_function_typedef_only.c  test_gcc_intrinsics.c  test_inline_fix.c  test_long_enum.c  test_minimal_static.c  test_parts.c  test_simple_intrinsic.c  test_simple_static.c  test_simple_typedef.c  (+12 more)
src/: main.c
src/ast/: ast.c  ast.h
src/codegen/: backend.c  backend.h  codegen.c  codegen.h  llvm_backend.c  llvm_backend.h  llvm_backend_impl.c
src/common/: debug.c  debug.h  error.c  error.h  memory.c  memory.h  types.h
src/lexer/: lexer.c  lexer.h
src/parser/: c_parser.c  c_parser.h  parser.c  parser.h  theggcaa.c
src/preprocessor/: preprocessor.c  preprocessor.h
src/syntax/: c_syntax.c  c_syntax.h  syntax.h
tests/: test_codegen.c  test_lexer.c  test_lua.c  test_parser.c  test_parser_stress.c  test_preprocessor.c  test_self_compile.c
